--- a/src/blocks/page/__details/page__details.css
+++ b/src/blocks/page/__details/page__details.css
@@ -26,10 +26,8 @@
 
 @media (max-width: 1100px) {
   .page__details {
-    position: absolute;
-    top: 25px;
-    right: 22px;
     font-size: 13px;
+    margin-top: 26px;
   }
 }
 
