--- a/src/blocks/page/__main-info-city/page__main-info-city.css
+++ b/src/blocks/page/__main-info-city/page__main-info-city.css
@@ -1,4 +1,4 @@
-.page__main-info-citi {
+.page__main-info-city {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 20px;
@@ -7,7 +7,7 @@
 }
 
 @media (max-width: 1100px) {
-  .page__main-info-citi {
+  .page__main-info-city {
     font-size: 18px;
   }
 }
