--- a/src/blocks/page/__sidebar-line/page__sidebar-line.css
+++ b/src/blocks/page/__sidebar-line/page__sidebar-line.css
@@ -13,8 +13,6 @@
 
 @media (max-width: 1100px) {
   .page__sidebar-line {
-    position: static;
-    margin: 20px auto 20px;
-    width: 300px;
+    display: none;
   }
 }
