--- a/src/blocks/page/__input/page__input.css
+++ b/src/blocks/page/__input/page__input.css
@@ -8,7 +8,7 @@
   font-family: "Inter", sans-serif;
   font-weight: 400;
   font-size: 20px;
-  color: rgba(255, 255, 255, 0.31);
+  color: rgb(255, 255, 255);
   margin-left: 22px;
 }
 
