--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -9,6 +9,7 @@
 @import url(../blocks/page/__main-info-city/page__main-info-city.css);
 @import url(../blocks/page/__main-info-condition/page__main-info-condition.css);
 @import url(../blocks/page/__main-info-date/page__main-info-date.css);
+@import url(../blocks/page/__main-info/__main-info_hiden/page__main-info_hiden.css);
 /* Боковая панель */
 @import url(../blocks/page/__sidebar/page__sidebar.css);
 @import url(../blocks/page/__form/page__form.css);
@@ -20,10 +21,12 @@
 @import url(../blocks/page/__details-li/page__details-li.css);
 @import url(../blocks/page/__sidebar-button/page__sidebar-button.css);
 @import url(../blocks/page/__main-info-city-date/page__main-info-city-date.css);
+
 /* Погода на завтра */
 @import url(../blocks/page/__weather-tomorrow/page__weather-tomorrow.css);
 @import url(../blocks/page/__weather-tomorrow-info/page__weather-tomorrow-info.css);
 @import url(../blocks/page/__weather-tomorrow-ul/page__weather-tomorrow-ul.css);
+@import url(../blocks/page/__weather-tomorrow/_active/page__weather-tomorrow_active.css);
 /* Мобильная версия */
 @import url(../blocks/page/__mobile-background/page__mobile-background.css);
 @import url(../blocks/page/__container-cities-ditails/page__container-cities-ditails.css);
