--- a/src/blocks/page/__weather-tomorrow-ul/page__weather-tomorrow-ul.css
+++ b/src/blocks/page/__weather-tomorrow-ul/page__weather-tomorrow-ul.css
@@ -12,3 +12,9 @@
 .page__weather-tomorrow-ul li {
   margin-bottom: 7px;
 }
+
+@media (max-width: 499px) {
+  .page__weather-tomorrow-ul li {
+    margin-bottom: 4px;
+  }
+}
