ref:погода на завтра

--- a/src/blocks/page/__cities/page__cities.css
+++ b/src/blocks/page/__cities/page__cities.css
@@ -9,12 +9,12 @@
 }
 .page__cities li:first-child {
   font-size: 20px;
+  cursor: auto;
 }
 .page__cities li {
   margin-bottom: 26px;
   cursor: pointer;
 }
-
 .page__cities li:last-child {
   margin: 0;
 }
