--- a/src/blocks/page/__button-submit/page__button-submit.css
+++ b/src/blocks/page/__button-submit/page__button-submit.css
@@ -26,14 +26,14 @@
 
 @media (max-width: 1100px) {
   .page__button-submit {
-    width: 34px;
-    height: 34px;
-    background-color: transparent;
+    width: 40px;
+    height: 40px;
   }
 
   .page__button-submit::after {
     background-image: url(../../../images/search-mobile.svg);
-    width: 13px;
-    height: 13px;
+    background-size: cover;
+    width: 15px;
+    height: 15px;
   }
 }
