--- a/src/blocks/page/__container/page__conatiner.css
+++ b/src/blocks/page/__container/page__conatiner.css
@@ -2,7 +2,6 @@
   width: 60vw;
   height: 80vh;
   min-height: 650px;
-  background-image: url(../../../images/Rostov.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
@@ -11,7 +10,18 @@
   margin: 10px;
   background-position: center;
 }
-
+.page__container:before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
 @media (max-width: 1100px) {
   .page__container {
     flex-direction: column;
