--- a/src/blocks/page/__mobile-background/page__mobile-background.css
+++ b/src/blocks/page/__mobile-background/page__mobile-background.css
@@ -3,9 +3,20 @@
     position: relative;
     width: 100%;
     height: 400px;
-    background-image: url(../../../images/Rostov.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+  }
+  .page__mobile-background:before {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.3);
   }
 }
